--- a/Front-end/iot/package.json
+++ b/Front-end/iot/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.4",
     "next": "14.2.11",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.3",
